# ETMP-Player

./: .gitignore  ETMP.sln  FEATURES_SINCE_2.0.md  README.md  check_db.ps1  run_etmp.bat
ETMPClient/: App.xaml  App.xaml.cs  ETMPClient.csproj  MainWindow.xaml  MainWindow.xaml.cs  SplashScreen.xaml  SplashScreen.xaml.cs
ETMPClient/Audio/: CapturingSampleProvider.cs  EqualizerPresets.cs  EqualizerSampleProvider.cs  SampleAggregator.cs
ETMPClient/Commands/: AddSongAsyncCommand.cs  AsyncCommandBase.cs  BackwardSongCommand.cs  ChangeBannerAsyncCommand.cs  CommandBase.cs  CreatePlaylistAsyncCommand.cs  DeleteSpecificPlaylistAsyncCommand.cs  DeleteSpecificSongAsyncCommand.cs  ForwardSongCommand.cs  NavigationCommand.cs  OpenExplorerAtPathCommand.cs  OpenLinkCommand.cs  PlaySpecificSongCommand.cs  RelayCommand.cs  RenamePlaylistAsyncCommand.cs  SwitchPageToHomeCommand.cs  SwitchPageToPlaylistCommand.cs  ToggleMusicPlayerStateCommand.cs  TogglePlaylistRemoveCommand.cs  ToggleVolumeCommand.cs
ETMPClient/Components/: DropSlider.cs  LoadingSpinner.cs
ETMPClient/Controls/: DirectXVisualizerHost.cs  PlayerControl.xaml  PlayerControl.xaml.cs  ToolbarControl.xaml  ToolbarControl.xaml.cs
ETMPClient/Converters/: BooleanToVisibilityHelpers.cs  ByteArrayToImageConverter.cs  ColorBrightnessConverter.cs  DiameterAndThicknessToStrokeDashArrayConverter.cs  EnumToBoolConverter.cs  LocalizeConverter.cs  RangeConverter.cs  VisualizerHeightConverter.cs
ETMPData/: ETMPData.csproj
VisualizerNative/: CMakeLists.txt  VisualizerNative.cpp  VisualizerNative.h
data/: player
(+91 files in other folders)
